actually done with floating blocks

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Project</title>
+  <title>floating urban blocks</title>
   <meta name="description" content="Project"/>
   <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
@@ -247,26 +247,8 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="row">
-            <div class="col-12 col-sm-6">
-                <div class="sectionheader">
-                    <h3>Who is user?</h3>
-                    <div id=underline1></div>
-                </div>
-                <img src="../assets/img/users.svg" id="users">
-            </div>
-            <div class="col-12 col-sm-6">
-                <div class="sectionheader">
-                    <h3>Our users need...</h3>
-                    <div id=underline1></div>
-                </div>
-                <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>Houses that are functional and environmentally adaptable, while still feeling like homes.</h7>
-                <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>A cohesive community that contains shared public spaces where residents can interact with each other.</h7>
-                <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>A thoughtful design for a community block that is safe, secure, and adaptable to rising sea levels.</h7>
-            </div>
-            <hr>
 
+        <hr>
         <h2>Background</h2>
         <div class="container">
             <p>To mitigate the increasing risk that rising sea levels pose to developed infrastructure along coastal regions, we
@@ -290,7 +272,30 @@
             research, we were able to amass data through existing models of floating houses already implemented throughout the
             world.</p>
 
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <div class="sectionheader">
+                        <h3>Who is user?</h3>
+                        <div id=underline1></div>
+                    </div>
+                    <img src="../assets/img/users.svg" id="users">
+                </div>
+                <div class="col-12 col-sm-6">
+                    <div class="sectionheader">
+                        <h3>Our users need...</h3>
+                        <div id=underline1></div>
+                    </div>
+                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>Houses that are functional and
+                        environmentally adaptable, while still feeling like homes.</h7>
+                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>A cohesive community that
+                        contains shared public spaces where residents can interact with each other.</h7>
+                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>A thoughtful design for a
+                        community block that is safe, secure, and adaptable to rising sea levels.</h7>
+                </div>
+            </div>
         </div>
+
+        <hr>
     
         <h2>Deliverables</h2>
             <div class="container">
@@ -311,7 +316,7 @@
                         <div id=underline5></div>
                     </div>
                     <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?
-</h7>
+                    </h7>
                     <div class="container">
                         <p id="d1p1">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
                         patient. Virtual tools are set up to measure range of motion, angles, and time under pressure of their joint.</p>
@@ -338,10 +343,10 @@
                 being environmentally conscious?</h7>
                 <div class="container">
                     <p id="d2p1">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
-                    configurations of the laser-cut structures we had created to determine the best possible community arrangement.</p>
+                    configurations of the laser-cut structures we had created to determine the best possible community arrangement.
                     <br>
                     <br>
-                    <p>For each layout, we gathered user feedback from Bay Area residents about its potential liveability to gain more insight
+                    For each layout, we gathered user feedback from Bay Area residents about its potential liveability to gain more insight
                     into how individuals might interact within each community design.</p>
                     <br>
                     <br>
