--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Project</title>
+  <title>netic health</title>
   <meta name="description" content="Project"/>
   <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <h1 id="proj-title">netic health</h1>
-                    <h5>designing a better experience for physical therapy patients.</h5>
+                    <h5>designing a better experience for physical therapy patients</h5>
                     <hr id="topbar-hr">
                     <div class="holder">
                         <div class="row details">
@@ -282,9 +282,9 @@
                         </span>
                         How might we design branding that portrays a path to recovery?</h7>
                     <div class="container">
-                        <p id="d1p1">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
+                        <p class="d1p4">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
                         patient. Virtual tools are set up to measure range of motion, angles, and time under pressure of their joint.</p>
-                        <p id="d1p2">We wanted to highlight the use of AI and the element of visually tracking the limbs in our logo, so we added angels and
+                        <p class="d1p5">We wanted to highlight the use of AI and the element of visually tracking the limbs in our logo, so we added angels and
                         measurements to the lettering. The eventual goal of recovery is reflected by the sprinting person illustrated at the end
                         of the logo itself. Finally, we also decided to change the name from NeoMotion AI to Netic Health.</p>
                     </div>
@@ -308,7 +308,7 @@
                     </span>
                     How might we track users’ movement in order to guide them and provide feedback?</h7>
                 <div class="container">
-                    <p id="d2p1">Working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a
+                    <p class="d2p6">Working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a
                     series of images as inputs.
                     <br> <br>
                     In pursuit of this goal, we reviewed, learned, and implemented the basics of pose estimation via an algorithm that
