thrive content is done

--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Project</title>
+  <title>thrive networks</title>
   <meta name="description" content="Project"/>
   <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
@@ -71,8 +71,8 @@
                     <img src="../assets/img/netic/colors.png" class="topbar-img">
                 </div>
                 <div class="col-12 col-sm-6">
-                    <h1 id="proj-title">netic health</h1>
-                    <h5>designing a better experience for physical therapy patients.</h5>
+                    <h1 id="proj-title">thrive networks</h1>
+                    <h5>delivering a sustainable and flexible organization infrastructure to increase clean water access.</h5>
                     <hr id="topbar-hr">
                     <div class="holder">
                     <div class="row details">
@@ -80,7 +80,7 @@
                             <h4 id="proj-details">Duration</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Feb 2020 - May 2020</h6>
+                            <h6 id="proj-answers">Sept 2019 - Dec 2019</h6>
                         </div>
                     </div>
                     <div class="row details">
@@ -88,7 +88,7 @@
                             <h4 id="proj-details">Focus</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Health, Society, Public Health, Accessibility</h6>
+                            <h6 id="proj-answers">Society, Health, Accessibility</h6>
                         </div>
                     </div>
                     <div class="row details">
@@ -96,7 +96,7 @@
                             <h4 id="proj-details">Tools</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Figma, Adobe Illustrator, TensorFlow, Python</h6>
+                            <h6 id="proj-answers">Adobe Suite, Canva, Figma, AutoCAD, Fusion 360</h6>
                         </div>
                     </div>
                     <div class="row details">
@@ -104,7 +104,7 @@
                             <h4 id="proj-details">Partner</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Netic Health</h6>
+                            <h6 id="proj-answers">Thrive Networks</h6>
                         </div>
                     </div>
                     </div>
