--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -359,12 +359,11 @@
                     </span>
                     How might we ensure that the product is adequately serving the needs of PT patients?</h7>
                 <div class="container">
-                    <p>Hello</p>
                         <p id="d4p4">Some features we wanted to address were:
-                            <ul>Are the color choices we made easy to read?</ul>
-                            <ul>Is the app easy to use? Does it make sense?</ul>
-                            <ul>Are you able to access all the features?</ul>
-                            <ul>Do patients like these features? </ul>
+                            <ul>
+                            <li>Are the color choices we made easy to read?</li>
+                            <li>Is the app easy to use? Does it make sense?</li>
+                            <li>Are you able to access all the features?</li>                            </ul>
                         </p>
                         <p class="d4p3"> One thing that was found in user testing was that people were more inclined to use fitness apps if there was a social aspect involved. Thinking of a brand new patient that is struggling we wanted to hone in on the gamification aspect of the app to incentive people to keep up with their at home workouts. </p>
                         <p class="d4p3">In the end, we were able to create a working Figma prototype that properly encompasses all the different aspects that
