add scss files for each project

--- a/v1.5/groupsource15.html
+++ b/v1.5/groupsource15.html
@@ -31,6 +31,8 @@
   <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
   <!-- <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
   <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
+  <!-- Project specific style sheet -->
+  <link rel="stylesheet" href="../assets/css/groupsource.css" type="text/css" />
 </head>
 
 <body>
