--- a/v1.5/makerspace15.html
+++ b/v1.5/makerspace15.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
     <!-- <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
     <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
+    <!-- Project specific style sheet -->
+    <link rel="stylesheet" href="../assets/css/makerspace.css" type="text/css" />
 </head>
 
 <body>
