adding images for real this time

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -63,7 +63,7 @@
 <div class="container">
 
     <h1> WELCOME TO ICB</h1>
-    <h6>Our About page allows us to share our values, mission, and origin story with you! </h6>
+    <h6>Find out what is important to us an organization.</h6>
     
     <h2 id="missionmobile">Our Mission and Values</h2>
     <h4 id="inventmobile">Inventing new ways to make a better world.</h4>
