--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -85,7 +85,7 @@
         <!-- Header -->
         <div class = "header">
             <h1> OUR INVENTORS </h1>
-            <h6> Meet the heart behind our designs!</h6>
+            <h6> Meet the heart behind our designs.</h6>
         </div>
 
         <!-- Exec Board -->
