--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -80,7 +80,7 @@
     <div style="background-image: url('../assets/img/projs-background.svg'); background-size: cover; background-position-y: -20%; background-repeat: no-repeat;">
     <div class="container">
         <h1 style="text-align: center;"><strong>PROJECT GALLERY</strong></h1>
-        <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 5%;">View our assortment of projects over the years</h6>
+        <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 5%;">View our assortment of projects over the years.</h6>
         <p style="padding-left: 6.7%;">Categories of: 
             <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
             <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
