--- a/indexv15.html
+++ b/indexv15.html
@@ -121,39 +121,41 @@
         <div class="projects-section">
             <div class="container projects-div">
                 <div class="row">
-                    <div class="col-4 d-flex">
+                    <div class="col-4 d-flex justify-content-center">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
                         </a>
                     </div>
+                    <div class="col-4 space">
+                    </div>  
                     <div class="col-4 d-flex justify-content-center">
-                        <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
-                    </div>     
-                    <div class="col-4 d-flex justify-content-flex-end">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
                         </a>
                     </div>  
-                    <div class="col-4 d-flex">
+                    <div class="col-4 d-flex justify-content-center">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
                         </a>
                     </div>
-                    <div class="col-4 space">
+                    <div class="col-4">
+                        <div class="container">
+                            <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
+                        </div>
                     </div>
-                    <div class="col-4 d-flex justify-content-flex-end">
+                    <div class="col-4 d-flex justify-content-center">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
                         </a>
                     </div>  
-                    <div class="col-4 d-flex">
+                    <div class="col-4 d-flex justify-content-center">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
                         </a>
                     </div>
                     <div class="col-4 space">
                     </div>  
-                    <div class="col-4 d-flex justify-content-flex-end">
+                    <div class="col-4 d-flex justify-content-center">
                         <a href="v1.5/projects.html">
                             <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
                         </a>
