paragraph classes for individual projects

--- a/v1.5/alemany15.html
+++ b/v1.5/alemany15.html
@@ -269,11 +269,11 @@
                         </span>
                         How might we provide volunteers with accessible information about trees?</h7>
                     <div class="container">
-                        <p class="d1p2">After logging in to our app, the landing page allows volunteers to scan a tree’s unique QR code that is linked to the tree's dedicated page within the application. This page includes information about treatments, harvests, and disease symptoms – among other things.</p>
+                        <p class="p2">After logging in to our app, the landing page allows volunteers to scan a tree’s unique QR code that is linked to the tree's dedicated page within the application. This page includes information about treatments, harvests, and disease symptoms – among other things.</p>
                         <br> <br>
                         The interactive map of the orchards allows users to navigate to certain trees and to add or remove trees from the system as needed.
                         </p>
-                        <p class="d1p5">The QR code improves the accessibility of information and history about the trees through a direct user interface given the volunteer’s close proximity to a specific tree. The mapping system helps volunteers navigate the orchard more easily.</p>
+                        <p class="p1">The QR code improves the accessibility of information and history about the trees through a direct user interface given the volunteer’s close proximity to a specific tree. The mapping system helps volunteers navigate the orchard more easily.</p>
                     </div>
                 </div>
             </div>
@@ -295,12 +295,12 @@
                     </span>
                     How might we facilitate a standardized, intuitive data collection process for volunteers?</h7>
                 <div class="container">
-                    <p class="d2p1">The app needed to be quickly accessible as well as easily navigable after the care for each tree was completed. Efficiency and ease of use was key.
+                    <p class="p1">The app needed to be quickly accessible as well as easily navigable after the care for each tree was completed. Efficiency and ease of use was key.
                     </p>
-                    <p class="d2p3">
+                    <p class="p3">
                         Our data input page includes the following features that make standardized, simple record-keeping a possibility for volunteers: horizontal scrolling, overlaid pop-up menus for inputting new data, and an automatic time-stamp for each entry all assist with this process.
                     </p>
-                    <p class="d2p5">
+                    <p class="p5">
                         Historical data can be analyzed using the data visualization feature. This can be paired with rainfall and other weather data from local weather stations to better understand the relationships between a variety of factors and quantity of food produced by a specific tree.
                     </p>
                 </div>
@@ -315,7 +315,7 @@
                     </span>
                     How might we create an integrated branding campaign that communicates the connection and purpose between both programs and the social impact on students?</h7>
                 <div class="container">
-                    <p class="d2p1">Helping volunteers maximize the time they spend working on productive tasks was a key goal of ours. For this reason, our mobile application needed to be simple, clear, and intuitive for our volunteers.
+                    <p class="p4">Helping volunteers maximize the time they spend working on productive tasks was a key goal of ours. For this reason, our mobile application needed to be simple, clear, and intuitive for our volunteers.
                     <br> <br>
                     We put careful thought into the typography of the app, the colors, and their meanings, and the overall positioning of key elements to ensure we maintained a sophisticated aesthetic while creating an intuitive interactive experience.
                     <br> <br>
