--- a/v1.5/bsfc15.html
+++ b/v1.5/bsfc15.html
@@ -257,7 +257,7 @@
                         </span>
                         How might we better understand the best practices  of organizaitons who aim to provide healthy and affordable food to their communities?</h7>
                     <div class="container">
-                        <p class="d1p4">We reviewed organizations with similar goals to the Collective and found that cooperative success and function seemed to generally stem from:</p>
+                        <p class="p4">We reviewed organizations with similar goals to the Collective and found that cooperative success and function seemed to generally stem from:</p>
                         <ul>
                         <li>a sense of community </li>
                         <li>a strict membership work requirement </li>
@@ -287,7 +287,7 @@
                     </span>
                     How might we provide for and engage a more representative membership especially within communities that are not currently represented?</h7>
                 <div class="container">
-                    <p class="d2p1">We decided to conduct one-on-one interviews as we felt this would yield more detailed and in-depth insights compared to basic general surveys.
+                    <p class="p1">We decided to conduct one-on-one interviews as we felt this would yield more detailed and in-depth insights compared to basic general surveys.
                         <br> <br>
                         It was found that members typically joined the Collective because of the principles and ideals that it upholds rather than any incentives associated with membership.
                         <br> <br>
@@ -307,8 +307,8 @@
                     </span>
                     How might we better understand and meet the needs of the community that is served by the Collective?</h7>
                 <div class="container">
-                    <p class="d2p1">We spoke with the Vice President of Student Affairs for Berkeley about the student community and its relationship with the Collective. In order to improve the diversity of the Collective’s membership and users, she recommended that the Collective strive to be more intentional about serving marginalized communities. “Sometimes it's not about students coming to you, but you going to students.” </p>
-                    <P class="d2p1">
+                    <p class="p3">We spoke with the Vice President of Student Affairs for Berkeley about the student community and its relationship with the Collective. In order to improve the diversity of the Collective’s membership and users, she recommended that the Collective strive to be more intentional about serving marginalized communities. “Sometimes it's not about students coming to you, but you going to students.” </p>
+                    <P class="p2">
                         The director of COFED (operations), an organization that works with food co-ops and focuses on inclusion, was asked about how to better engage marginalized groups. Her suggestions included:
                         <ul>
                             <li>focusing on the education of food apartheid </li>
