--- a/v1.5/commcafe15.html
+++ b/v1.5/commcafe15.html
@@ -281,11 +281,11 @@
                         </span>
                         How might we engage with the Berkeley community and spread awareness about the program and the issue of food insecurity?</h7>
                     <div class="container">
-                        <p class="d1p1">Coronavirus has shaken the global economy and its effects will be felt for years, but one of its most immediate, observable effects is decreasing access to affordable, healthy food.</p>
+                        <p class="p2">Coronavirus has shaken the global economy and its effects will be felt for years, but one of its most immediate, observable effects is decreasing access to affordable, healthy food.</p>
                         </p>
-                        <p class="d1p5">To work in the space of food accessibility, we must now understand how the issue has been exacerbated due to the health crisis. </p>
+                        <p class="p5">To work in the space of food accessibility, we must now understand how the issue has been exacerbated due to the health crisis. </p>
                         </p>
-                        <p class="d1p6">We conducted user interviews with:
+                        <p class="p6">We conducted user interviews with:
                             <ul>
                                 <li>students experiencing food insecurity</li>
                                 <li>members of the UC system who work in alleviating food insecurity among students</li>
@@ -314,7 +314,7 @@
                     </span>
                     How might we design to-go containers, utensils, and pizza boxes that are sustainable and convey the overall brand and social impact?</h7>
                 <div class="container">
-                    <p class="d2p1">Originally, we focused on ideas that would make our pizza box stand out, while being sustainable and eco-friendly.
+                    <p class="p3">Originally, we focused on ideas that would make our pizza box stand out, while being sustainable and eco-friendly.
                         <br> <br>
                         Upon recognizing that the cost of reinventing the pizza box did not outweigh the benefit, we focused our attention on designing the graphics on the box. 
                         <br> <br>
@@ -336,7 +336,7 @@
                     </span>
                     How might we create an integrated branding campaign that communicates the connection and purpose between both programs and the social impact on students?</h7>
                 <div class="container">
-                    <p class="d3p4">In this initial process, we sought big picture ideas to get a feel for how we envisioned the end product. We explored different ways to add character to the space within the guidelines set by Cal Dining. 
+                    <p class="p4">In this initial process, we sought big picture ideas to get a feel for how we envisioned the end product. We explored different ways to add character to the space within the guidelines set by Cal Dining. 
                         <br> <br>
                         During menu creation, we experimented with different ways to make Pizza With a Purpose unique to the Berkeley community (i.e. naming the pizzas after campus trademarks). 
                         <br> <br>
