--- a/v1.5/concha15.html
+++ b/v1.5/concha15.html
@@ -326,7 +326,7 @@
                     <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we understand the needs of Concha Labs’ users?
                     </h7>
                     <div class="container">
-                        <p class="d1p1">After performing some preliminary user testing, we found that the interface was poorly designed for people who were
+                        <p class="p">After performing some preliminary user testing, we found that the interface was poorly designed for people who were
                         older and lacked experience with technology. Some constraints we wanted to keep in mind included:</p>
                         <p>
                             We conducted user interviews with:
@@ -341,7 +341,7 @@
                             After identifying specific problems with the UI and researching accessible design principles, we redesigned the
                             interface with the following improvements in mind:
                         </p>
-                        <p>
+                        <p class="p">
                             <ul>
                             <li>Clear instructions on each page</li>
                             <li>Bolder + larger fonts and buttons</li>
@@ -375,11 +375,11 @@
                     How might we empathize with our user and quantify the usability gains in our work?
                     life?</h7>
                 <div class="container">
-                    <p class="d2p1">We ran 16 usability tests, taking into account ease of use, clarity of instructions, and the app’s aesthetic. Users were
+                    <p class="p">We ran 16 usability tests, taking into account ease of use, clarity of instructions, and the app’s aesthetic. Users were
                     asked to score each metric on a scale of 1-10.
                     While the data above shows aggregate scores across the entire app, certain screens had greater improvements than others.
                     </p>
-                    <p class="d2p2">
+                    <p class="p">
                         Specifically, we found that some users struggled to use the slider altogether. Our redesign to use buttons with discrete
                         marks instead were a clear improvement, as users spent less time worrying about finding the “correct” spot, while also
                         giving them more confidence in their results.
