--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -339,18 +339,17 @@
 
                     </h7>
                     <div class="container">
-                        <p class="d1p1">We decided to survey museum patrons to get a feel for their perceptions and preferences. Interviewing many people
+                        <p class="p1">We decided to survey museum patrons to get a feel for their perceptions and preferences. Interviewing many people
                         allowed us to create the best product for our users that wouldn’t take away from the experience.</p>
-                        <p class="d1p2">To avoid overwhelming responders , we pared down our queries to just five main questions and interviewed anyone and
+                        <p class="p4">To avoid overwhelming responders, we pared down our queries to just five main questions and interviewed anyone and
                         everyone who came through the main lobby for three weeks.</p>
-                        <p>
+                        <p class="p6">
                             We found that:
                             <ul>
                                 <li>
                                     People didn’t want to download an app as it took up space so we went with a web application
                                 </li>
-                                <li>People didn’t want to download an app as it took up space so we went with a web application</li>
-
+                                <li>PLACEHOLDER</li>
                             </ul>
                         </p>
 
@@ -376,15 +375,15 @@
                     How might we create accurate and interesting content that will enhance Hofmann’s work and provide context about his
                     life?</h7>
                 <div class="container">
-                    <p class="d2p1">We began by close reading the curator’s essay and drafting questions we had about the material and Hofmann.
+                    <p class="p4">We began by close reading the curator’s essay and drafting questions we had about the material and Hofmann.
                     </p>
-                    <p class="d2p2">
+                    <p class="p2">
                         Next, Lucinda graciously agreed to let us interview her. We met in the gallery, recorded her responses and learned
                         extensively about Hofmann. </p>
-                    <p>
+                    <p class="p1">
                         We put the interview reponses together into short videos and decided to subtitle the videos in English (as a start).
                     </p>
-                    <p>We also found impactful quotes from the essay about various pieces in the exhibit and recorded our own voices. We
+                    <p class="p mixed">We also found impactful quotes from the essay about various pieces in the exhibit and recorded our own voices. We
                     decided to use our own voices as we are a group of diverse young, individuals hopefully keeping up to our promise of
                     creating non-intimidating content.</p>
                 </div>
@@ -403,13 +402,13 @@
                         </span>
                         How might we present information in an intuitive and engaging way?</h7>
                     <div class="container">
-                        <p class="d3p1">At first, we diverged by creating many wireframes and ideas to find a good flow for the application.</p>
-                        <p class="d3p2"> Next, we converged on a single design and each broke up to design and code various pieces of the application: the land
+                        <p class="p2">At first, we diverged by creating many wireframes and ideas to find a good flow for the application.</p>
+                        <p class="p5"> Next, we converged on a single design and each broke up to design and code various pieces of the application: the land
                         page, the timeline, the image database etc.</p>
-                        <p class="d3p3">Each painting in the exhibit had accompanying information ranging from image recreations, basic painting details, video
+                        <p class="p3">Each painting in the exhibit had accompanying information ranging from image recreations, basic painting details, video
                         or audio files, and photos from Hofmann’s life that patrons could access on the app through a QR code which we got the
                         museum and curator to agree to (not an easy feat!)</p>
-                        <p class="d3p4"> Finally, to assess or work, we looked at web analytics to see how many people used our application and for how long.</p>
+                        <p class="p2"> Finally, to assess or work, we looked at web analytics to see how many people used our application and for how long.</p>
                     </div>
                 </div>
             </div>
@@ -421,9 +420,6 @@
         </div>
     </div>
     </div>
-
-
-
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
