--- a/v1.5/makerspace15.html
+++ b/v1.5/makerspace15.html
@@ -331,14 +331,14 @@
 
                     </h7>
                     <div class="container">
-                        <p class="d1p1">Given the current COVID-19 pandemic, we have readjusted those goals to create a guide tailored to the specific needs of
+                        <p class="p2">Given the current COVID-19 pandemic, we have readjusted those goals to create a guide tailored to the specific needs of
                         the MM: lack of awareness, lack of engagement in the space, and lack of control over the space.</p>
-                        <p>
+                        <p class="p1">
                             Futhermore, the Moffitt Makerspace is positioned within the larger renovation of Moffitt Library’s 1st to 3rd floors
                             soon to be know as the Center for Connected Learning. Thus, we have shaped our guide and research to be useful in the
                             long-term structural and systematic redesign.
                         </p>
-                        <p>
+                        <p class="p6">
                             Our guide includes various user interview guides, design suggestions and assets, and marketing strategies and resources.
                             Our specific focus on outreach efforts include email templates and recommended student groups to reach out to. We saw
                             cross-campus partnership as an effective and sustainable way to continue expanding the current user groups. Recommended
@@ -369,15 +369,12 @@
                     </span>
                     How might we promote a clear identity of the MM and a clearer roadmap for Floor 1 of Moffitt Library?</h7>
                 <div class="container">
-                    <p class="d2p1">The final wall map for Moffitt Floor 1 includes several key features that create better transparency for the
+                    <p class="p3">The final wall map for Moffitt Floor 1 includes several key features that create better transparency for the
                     functionality of each room (see image to the left).
-                    </p>
-                    <br>
-                    <br>
                     The first key feature is the informational bubbles to each space describing the room’s functionality with interactive
                     QR-codes for additional information.
                     </p>
-                    <p class="d2p2">
+                    <p class="p1">
                         The second key feature is the design aesthetic for the wall-sized map. The muted purple reflects the actual color of the wall and is complimented by pastels for a simple, easily digestible info-graphic. </p>
                 </div>
             </div>
@@ -395,13 +392,12 @@
                     </span>
                     How might we extend our outreach efforts to engage with new user groups?</h7>
                 <div class="container">
-                    <p class="d3p1">Our final deliverable is a postcard-sized pamphlet that promotes and brings awareness to the space and is to be handed
+                    <p class="p4">Our final deliverable is a postcard-sized pamphlet that promotes and brings awareness to the space and is to be handed
                     out at the numerous front-desks of Moffitt Library as well as other makerspaces around campus. The pamphlet features
                     both a 2D layout map of the first floor of Moffitt as well as a 3D orthographic depiction of the makerspace. The
                     pamphlets also include a brief overview of the features, location, and hours of the makerspace.</p>
-                    <p class="d3p2">Parallel to the design aesthics of the wall map and the Moffitt Makerspace Guide, the pamphlet follows muted, warm tan,
+                    <p class="p5">Parallel to the design aesthics of the wall map and the Moffitt Makerspace Guide, the pamphlet follows muted, warm tan,
                     and brown colors to convey a feeling described by the team as “cozy-library-vibes.”</p>
-                    
                 </div>
             </div>
         </div>
