--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -301,13 +301,7 @@
     
         <h2>Deliverables</h2>
             <div class="container">
-                <p>We began by researching existing floating communities to determine the architectural requirements of a floating
-                residential structure, taking inspiration from similar structures in Ijburg, Netherlands. Combining that inspiration
-                with our own ideas for a functional and comfortable home layout, we sketched designs for two-story homes.
-                </p>
-                <p>After visualizing a two-dimensional unfolded layout, we created initial prototypes out of cardboard and aluminum foil.
-                Once we tested the efficacy of our 3D designs, we created a higher-fidelity prototype by laser cutting each individual
-                home design from plywood. These structures served as our models for houses.</p>
+                <p> PLACEHOLDER!!!</p>
             </div>
 
         <div class="row">
@@ -320,11 +314,13 @@
                     <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?
                     </h7>
                     <div class="container">
-                        <p id="d1p1">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
-                        patient. Virtual tools are set up to measure range of motion, angles, and time under pressure of their joint.</p>
-                        <p id="d1p2">We wanted to highlight the use of AI and the element of visually tracking the limbs in our logo, so we added angels and
-                        measurements to the lettering. The eventual goal of recovery is reflected by the sprinting person illustrated at the end
-                        of the logo itself. Finally, we also decided to change the name from NeoMotion AI to Netic Health.</p>
+                        <p class="p1">We began by researching existing floating communities to determine the architectural requirements of a floating
+                            residential structure, taking inspiration from similar structures in Ijburg, Netherlands. Combining that inspiration
+                            with our own ideas for a functional and comfortable home layout, we sketched designs for two-story homes.
+                        </p>
+                        <p class="p3">After visualizing a two-dimensional unfolded layout, we created initial prototypes out of cardboard and aluminum foil.
+                            Once we tested the efficacy of our 3D designs, we created a higher-fidelity prototype by laser cutting each individual
+                            home design from plywood. These structures served as our models for houses.</p>
                     </div>
                 </div>
             </div>
@@ -344,7 +340,7 @@
                 <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
                 being environmentally conscious?</h7>
                 <div class="container">
-                    <p id="d2p1">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
+                    <p id="p4">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
                     configurations of the laser-cut structures we had created to determine the best possible community arrangement.
                     <br>
                     <br>
@@ -352,7 +348,7 @@
                     into how individuals might interact within each community design.</p>
                     <br>
                     <br>
-                    <p id="d2p1">Based on our feedback analysis, we ultimately chose a layout with houses arranged around the edges of the block, with a
+                    <p id="p5">Based on our feedback analysis, we ultimately chose a layout with houses arranged around the edges of the block, with a
                     common area in the center of the arrangement. This formation allows for a more protected and cohesive community feel,
                     with space for a public area such as a community center or park.</p>
                 </div>
@@ -368,7 +364,7 @@
                     <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
                     communicate our community designs?</h7>
                     <div class="container">
-                        <p class="d3p1">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
+                        <p class="p2">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
                         higher-fidelity model of what the community would look like and how it would interact with a live body of water.
                         <br>
                         <br>
@@ -377,7 +373,7 @@
                         so that the floating ability of the block could be tested with a secluded body of water that can persist without
                         eutrophication.</p>
 
-                        <p class="d1p2">For this model, we decided to create a version in which the houses themselves do not float separately, but rather sit on
+                        <p class="p3">For this model, we decided to create a version in which the houses themselves do not float separately, but rather sit on
                         a block that supports the whole community. This allows for the block configurations to be easily rearranged as more
                         research and usability testing is conducted.
                         </p>
