--- a/v1.5/groupsource15.html
+++ b/v1.5/groupsource15.html
@@ -268,12 +268,12 @@
                         </span>
                         How might we create a platform that effectively connects students with relevant, professional experiences?</h7>
                     <div class="container">
-                        <p class="d1p5">While the Pilot Program explored both mentor and student perspectives, we chose to focus on the student use cases for our high fidelity mockups of the platform.</p>
-                        <p class="d1p2">Case 1: Searching for projects <br>
+                        <p class="p5">While the Pilot Program explored both mentor and student perspectives, we chose to focus on the student use cases for our high fidelity mockups of the platform.</p>
+                        <p class="p2">Case 1: Searching for projects <br>
                             Users can explore projects by filtering by area of study, time span, industry, etc. Users can save projects they like, which will then be stored in their dashboard.
                             <br> <br> Case 2: Creating an account <br>
                             In order to save a project, users must create an account. We collaborated with the strategy team to identify the key information we would want from students.</p>
-                            <p class="d1p5">Case 3: Personalized dashboard
+                            <p class="p5">Case 3: Personalized dashboard
                             Once a user creates an account, they gain a dashboard. The dashboard includes a profile to organize past experiences and skills, a place to see saved projects and choose which to apply to, and a place to store ongoing projects. </p>
                     </div>
                 </div>
@@ -296,16 +296,16 @@
                     </span>
                     How might we craft an experience that ensures a smooth workflow between mentors and their student team?</h7>
                 <div class="container">
-                    <p class="d2p4">The Pilot Program is what our team pictured to be the first version of mentor-student engagement to be used on the Groupsource platform. In preparing this deliverable, our Strategy Team considered various aspects of the interaction:
+                    <p class="p4">The Pilot Program is what our team pictured to be the first version of mentor-student engagement to be used on the Groupsource platform. In preparing this deliverable, our Strategy Team considered various aspects of the interaction:
                     <br> <br>
                     Student goals: what was important for students to have before going in and what were their goals for the project?
                     Mentor requirements: what kind of learning plan could mentors create in order to help students achieve their learning goals?
                     Project definition: how would mentors structure their project so that both project goals and learning goals were met?
                     </p>
-                    <p class="d2p2">
+                    <p class="p2">
                     Amongst all the previous factors and considerations, an integral component of the Strategy Team's goals was to ideate the Pilot Program experience, which was achieved through Business Process Flow Charts (BPFCs).
                     </p>
-                    <p class="d2p3">
+                    <p class="p3">
                         We scaled the charts to a ten-week project timeline, throughout which students have weekly check-ins to make sure their learning goals are being met. Based on this, project mentors and Groupsource will work together to adjust the curriculum on a dynamic basis as the timeline progresses.
                     </p>
                 </div>
