--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -284,9 +284,9 @@
                         </span>
                         How might we design branding that portrays a path to recovery?</h7>
                     <div class="container">
-                        <p class="d1p4">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
+                        <p class="p4">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
                         patient. Virtual tools are set up to measure range of motion, angles, and time under pressure of their joint.</p>
-                        <p class="d1p5">We wanted to highlight the use of AI and the element of visually tracking the limbs in our logo, so we added angels and
+                        <p class="p5">We wanted to highlight the use of AI and the element of visually tracking the limbs in our logo, so we added angels and
                         measurements to the lettering. The eventual goal of recovery is reflected by the sprinting person illustrated at the end
                         of the logo itself. Finally, we also decided to change the name from NeoMotion AI to Netic Health.</p>
                     </div>
@@ -310,7 +310,7 @@
                     </span>
                     How might we track users’ movement in order to guide them and provide feedback?</h7>
                 <div class="container">
-                    <p class="d2p6">Working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a
+                    <p class="p6">Working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a
                     series of images as inputs.
                     <br> <br>
                     In pursuit of this goal, we reviewed, learned, and implemented the basics of pose estimation via an algorithm that
@@ -336,8 +336,8 @@
                         </span>
                         How might we  design a user experience that motivates patients to complete their therapy?</h7>
                     <div class="container">
-                        <p class="d3p1">Though at first the platform was solely a place to help patients who needed help with physical therapy, unrelated to any medical entity, the coronavirus pandemic showed the need for having a medical professional at hand and gave us an insight into the growth that we will most likely experience in the Telemedicine Industry in the coming months and years. </p>
-                        <p class="d3p1"> Another feature introduced throughout the process was the idea of adding some sort of social gamification to the platform so as to make it more appealing for patients to follow-up on their treatment by encouraging healthy competition.
+                        <p class="p1">Though at first the platform was solely a place to help patients who needed help with physical therapy, unrelated to any medical entity, the coronavirus pandemic showed the need for having a medical professional at hand and gave us an insight into the growth that we will most likely experience in the Telemedicine Industry in the coming months and years. </p>
+                        <p class="p mixed"> Another feature introduced throughout the process was the idea of adding some sort of social gamification to the platform so as to make it more appealing for patients to follow-up on their treatment by encouraging healthy competition.
                             <br> 
                             We realized that this physical therapy app could be used for everyone. We do realize that it is usually people of an older demographic that are more likely to need knee replacements. In that regard, we wanted to make things on the app as functional and efficient as possible. Text is enlarged, the home page is strictly dedicated to workouts so one exactly knows where to go for his/her routine. We wanted to make sure that the purpose of this app does not get clouded in all the features we put in and make our intentions as clear as possible. </p>
                     </div>
@@ -361,14 +361,15 @@
                     </span>
                     How might we ensure that the product is adequately serving the needs of PT patients?</h7>
                 <div class="container">
-                        <p id="d4p4">Some features we wanted to address were:
-                            <ul>
+                        <p id="p4">Some features we wanted to address were:
+                        <ul>
                             <li>Are the color choices we made easy to read?</li>
                             <li>Is the app easy to use? Does it make sense?</li>
-                            <li>Are you able to access all the features?</li>                            </ul>
+                            <li>Are you able to access all the features?</li>
+                        </ul>
                         </p>
-                        <p class="d4p3"> One thing that was found in user testing was that people were more inclined to use fitness apps if there was a social aspect involved. Thinking of a brand new patient that is struggling we wanted to hone in on the gamification aspect of the app to incentive people to keep up with their at home workouts. </p>
-                        <p class="d4p3">In the end, we were able to create a working Figma prototype that properly encompasses all the different aspects that
+                        <p class="p3"> One thing that was found in user testing was that people were more inclined to use fitness apps if there was a social aspect involved. Thinking of a brand new patient that is struggling we wanted to hone in on the gamification aspect of the app to incentive people to keep up with their at home workouts. </p>
+                        <p class="p mixed">In the end, we were able to create a working Figma prototype that properly encompasses all the different aspects that
                         were envisioned by Netic Health; including a new company logo, name and slogan, a mission statement, and a fully
                         designed mobile application with features such as connecting to a PT, a way to track information, a "gamified" social
                         connection, and a way for people to easily utilize the machine learning technology developed by the company.
